syntax = "proto3";

package weed.iam;

option go_package = "github.com/seaweedfs/seaweedfs/weed/rpc";

service IAM {
}

message IAMConfiguration {
    repeated IAMIdentity identities = 1;
}

message IAMIdentity {
    string name = 1;
    repeated IAMCredential credentials = 2;
    repeated string actions = 3;
}

message IAMCredential {
    string access_key = 1;
    string secret_key = 2;
}
