syntax = "proto3";

package remote_pb;

option go_package = "github.com/seaweedfs/seaweedfs/weed/pb/remote_pb";

message RemoteConf {
  string type = 1;
  string name = 2;
  string s3_access_key = 4;
  string s3_secret_key = 5;
  string s3_region = 6;
  string s3_endpoint = 7;
  string s3_storage_class = 8;
  bool s3_force_path_style = 9;
  bool s3_v4_signature = 11;
}

message RemoteStorageMapping {
  map<string,RemoteStorageLocation> mappings = 1;
  string primary_bucket_storage_name = 2;
}

message RemoteStorageLocation {
  string name = 1;
  string bucket = 2;
  string path = 3;
}
